# OpenEnv

./: .gitignore  Dockerfile  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
customer_support_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py
