[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer_support_triage"
version = "1.0.0"
description = "A simulated customer support environment"
authors = [
  { name="AntiGravity" }
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]
